# new_string_template

./: .editorconfig  .gitignore  .releaserc.js  CHANGELOG.md  Cargo.toml  README.md  package.json  rustfmt.toml
.github/workflows/: audit.yml  stale.yml  tests.yml
.husky/: pre-commit
src/: error.rs  lib.rs  template.rs
