[package]
name = "new_string_template"
version ="1.3.1"
authors = ["hasezoey <hasezoey@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Simple Customizable String-Templating Library for Rust."
categories = ["template-engine", "text-processing"]
keywords = ["runtime", "string", "template"]
homepage = "https://github.com/hasezoey/new_string_template"
repository = "https://github.com/hasezoey/new_string_template"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
# This is to have the default Regex only compiled once
lazy_static = "1"
# This library uses regex's to find matches
regex = "1"
